--- a/public_html/portal/static/package.json
+++ b/public_html/portal/static/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "Banoo",
-  "version": "0.1.0",
+  "name": "banoo",
+  "version": "2.0.0",
   "description": "Banoo is project for Masumi Astan",
-  "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-nodeunit": "~0.4.1",
-    "grunt-contrib-sass": "^0.8.1",
-    "grunt-contrib-uglify": "~0.5.0",
-    "grunt-contrib-watch": "^0.6.1"
-  }
+  "dependencies": {
+    "grun": "^0.2.0",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-nodeunit": "^1.0.0",
+    "grunt": "^1.0.1",
+    "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-uglify": "^1.0.1",
+    "grunt-contrib-watch": "^1.0.0"
+  },
+  "author": "Baravak",
+  "license": "ISC"
 }
