--- a/public_html/portal/static/package.json
+++ b/public_html/portal/static/package.json
@@ -1,16 +1,12 @@
 {
-  "name": "banoo",
-  "version": "2.0.0",
-  "description": "Banoo is project for Masumi Astan",
-  "dependencies": {
-    "grun": "^0.2.0",
-    "grunt-contrib-jshint": "^1.0.0",
-    "grunt-contrib-nodeunit": "^1.0.0",
-    "grunt": "^1.0.1",
+  "name": "Banoo",
+  "version": "0.1.0",
+  "devDependencies": {
+    "grunt": "~0.4.5",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-nodeunit": "~0.4.1",
     "grunt-contrib-sass": "^1.0.0",
-    "grunt-contrib-uglify": "^1.0.1",
+    "grunt-contrib-uglify": "^0.5.1",
     "grunt-contrib-watch": "^1.0.0"
-  },
-  "author": "Baravak",
-  "license": "ISC"
+  }
 }
